# SwiftLabel

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
assets/: demo.mov
swiftlabel/: __init__.py  __main__.py  cli.py  filesystem.py  formats.py  models.py  server.py  session.py  state.py
swiftlabel/static/: app.js  index.html  style.css
tests/: conftest.py  test_filesystem.py  test_server.py  test_session.py  test_state.py
