[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swiftlabel"
version = "1.0.0"
description = "Keyboard-first image classification tool for ML practitioners"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "SwiftLabel Team" }
]
keywords = [
    "image-classification",
    "machine-learning",
    "labeling",
    "data-annotation",
    "keyboard-driven"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "aiofiles>=24.1.0",
    "click>=8.1.0",
    "pillow>=10.0.0",
    "websockets>=10.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.27.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "types-aiofiles>=23.2.0",
]

[project.scripts]
swiftlabel = "swiftlabel.cli:main"

[project.urls]
Homepage = "https://github.com/ksavkin/SwiftLabel"
Documentation = "https://github.com/ksavkin/SwiftLabel#readme"
Repository = "https://github.com/ksavkin/SwiftLabel"
Issues = "https://github.com/ksavkin/SwiftLabel/issues"

[tool.hatch.build.targets.wheel]
packages = ["swiftlabel"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "aiofiles.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "uvicorn.*"
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["swiftlabel"]

[tool.coverage.run]
source = ["swiftlabel"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
